--- a/ProjectPlug/src/View/CreateCustomerViewPanel.form
+++ b/ProjectPlug/src/View/CreateCustomerViewPanel.form
@@ -124,6 +124,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Create"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="buttonCreateCustomerActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
