--- a/ProjectPlug/src/View/MainInterface.form
+++ b/ProjectPlug/src/View/MainInterface.form
@@ -45,11 +45,11 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
-        <Component class="View.CreateCustomerViewPanel" name="customerViewPanel1">
+        <Component class="View.CreateCustomerViewPanel" name="createCustomerPanel">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab1">
-                <Property name="tabTitle" type="java.lang.String" value="tab1"/>
+              <JTabbedPaneConstraints tabName="CreateCustomer">
+                <Property name="tabTitle" type="java.lang.String" value="CreateCustomer"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
