--- a/trunk/ProjectPlug/src/View/MainInterface.form
+++ b/trunk/ProjectPlug/src/View/MainInterface.form
@@ -54,6 +54,15 @@
             </Constraint>
           </Constraints>
         </Component>
+        <Component class="View.DeleteCustomerViewPanel" name="deleteCustomerViewPanel1">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+              <JTabbedPaneConstraints tabName="tab2">
+                <Property name="tabTitle" type="java.lang.String" value="tab2"/>
+              </JTabbedPaneConstraints>
+            </Constraint>
+          </Constraints>
+        </Component>
       </SubComponents>
     </Container>
   </SubComponents>
