--- a/trunk/ProjectPlug/src/View/MainInterface.form
+++ b/trunk/ProjectPlug/src/View/MainInterface.form
@@ -45,20 +45,29 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
       <SubComponents>
-        <Component class="View.CreateCustomerViewPanel" name="createCustomerPanel">
+        <Component class="View.CreateCustomerViewPanel" name="createCustomerViewPanel1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="CreateCustomer">
-                <Property name="tabTitle" type="java.lang.String" value="CreateCustomer"/>
+              <JTabbedPaneConstraints tabName="Create customer">
+                <Property name="tabTitle" type="java.lang.String" value="Create customer"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="View.DeleteCustomerViewPanel" name="deleteCustomerViewPanel1">
+        <Component class="View.EditCustomerViewPanel" name="editCustomerViewPanel1">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
-              <JTabbedPaneConstraints tabName="tab2">
-                <Property name="tabTitle" type="java.lang.String" value="tab2"/>
+              <JTabbedPaneConstraints tabName="Edit customer">
+                <Property name="tabTitle" type="java.lang.String" value="Edit customer"/>
+              </JTabbedPaneConstraints>
+            </Constraint>
+          </Constraints>
+        </Component>
+        <Component class="View.SeeTransactionsViewPanel" name="seeTransactionsViewPanel2">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+              <JTabbedPaneConstraints tabName="See transactions">
+                <Property name="tabTitle" type="java.lang.String" value="See transactions"/>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
